@@ -3,6 +3,10 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.4
 
+	- The IPP backend now checks the job status at
+	  variable intervals (from 1 to 10 seconds) instead
+	  of every 10 seconds for faster remote printing
+	  (STR #2548)
 	- "lpr -p" and "lpr -l" did not work (STR #2544)
 	- Compilation failed when a previous version of CUPS
 	  was installed and was included in the SSL include
